feat: register controller with swagger documentation
