# app/Http/Resources/UserResource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            "name" => $this->name,
+            "email" => $this->email,
+            "gender" => $this->gender,
+            "unixId" => $this->unix_id,
+        ];
+    }
+
+    public function with(Request $request)
+    {
+        return [
+            "message" => "User Registered Successfully",
+        ];
+    }
+}
